# ProjectCyclone

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  README.md  premake5.lua
ProjectCyclone/: CMakeLists.txt  ProjectCyclone.oxproj  premake5.lua  renderer.oxconfig
ProjectCyclone/Assets/Materials/: Grass.oxmat
ProjectCyclone/Assets/Objects/crate1/: crate.gltf
ProjectCyclone/Assets/Objects/crate2/: create.gltf
ProjectCyclone/Assets/Objects/heli/: heli.gltf
ProjectCyclone/Assets/Scenes/: Main.oxscene
ProjectCyclone/src/: App.cpp  GameLayer.cpp  GameLayer.h
ProjectCyclone/src/Systems/: CrateSystem.cpp  CrateSystem.h  FreeCamera.cpp  FreeCamera.h  HeliCameraSystem.cpp  HeliCameraSystem.h  HeliSystem.cpp  HeliSystem.h  NPCSystem.cpp  NPCSystem.h
ProjectCyclone/src/UI/: GameUI.cpp  GameUI.h
